# firec2

./: Cargo.toml  index.html  pocgen.py  readme.md  sw.js  unsupported.html
src/: dashboard.rs  exfil.rs  globals.rs  implant.rs  main.rs  payloads.rs  victim.rs
