[package]
name = "minic2"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "io-std"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
futures = "0.3.31"
anyhow = "1.0.97"
warp = { version = "0.3.7", features = ["multipart"] }
bytes = "1.10.1"
lazy_static = "1.5.0"
